--- a/style.css
+++ b/style.css
@@ -45,8 +45,45 @@ main h2::before {
   background: linear-gradient(45deg, #8e2de2, #4a00e0);
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+}
+
 .input-field {
   position: relative;
+}
+
+form .input-field:first-child {
+  margin-bottom: 1.5rem;
+}
+
+.input-field .underline::before {
+  content: '';
+  position: absolute;
+  height: 1px;
+  width: 100%;
+  bottom: -5px;
+  left: 0;
+  background: rgba(0, 0, 0, 0.2);
+
+}
+
+.input-field .underline::after {
+  
+  content: '';
+  position: absolute;
+  height: 1px;
+  width: 100%;
+  bottom: -5px;
+  left: 0;
+  background: linear-gradient(45deg, #8e2de2, #4a00e0);
+  transform: scaleX(0);
+
+}
+
+.input-field input:focus {
+  transform: scaleX(1);
 }
 
 .input-field input {
@@ -69,4 +106,48 @@ form input[type="submit"] {
   font-weight: 300;
   border-radius: 4px;
   transition: all 0,3s ease;
+}
+
+form input[type="submit"]:hover {
+  letter-spacing: 0.5px;
+  background: linear-gradient(to right, #4776E6, #8e54e9);
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1rem;
+}
+
+.footer span {
+  color: rgba(0, 0, 0, 0.7);
+  font-size: 0.8rem;
+  text-align: center;
+}
+
+.footer .social-field {
+  padding: 0.4rem;
+  border-radius: 4px;
+  font-size: 0.85rem;
+  width: 100%;
+  cursor: pointer;
+  margin-top: 1rem;
+}
+
+.footer .social-field a i {
+  margin: 0 0.5rem;
+  width: 15px;
+}
+
+.footer .social-field a {
+  text-decoration: none;
+  color: white;
+}
+
+.footer .social-field.twitter {
+  background: linear-gradient(to right, #56a7f2, #468aca);
+}
+
+.footer .social-field.facebook {
+  background: linear-gradient(to right, #1e3c72, #2a5298);
 }
