--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 body {
   background: linear-gradient(45deg, #8e2de2, #4a00e0);
   background-repeat: no-repeat;
+
   min-height: 100vh;
   min-width: 100vw;
   display: flex;
@@ -21,7 +22,7 @@ body {
 
 main.container {
   background: white;
-  max-width: 350px;
+  max-width: 320px;
   min-height: 40vh;
   padding: 2rem;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
@@ -79,10 +80,11 @@ form .input-field:first-child {
   left: 0;
   background: linear-gradient(45deg, #8e2de2, #4a00e0);
   transform: scaleX(0);
-
+  transition: all .3s ease-in-out;
+  transform-origin: left;
 }
 
-.input-field input:focus {
+.input-field input:focus ~ .underline::after {
   transform: scaleX(1);
 }
 
@@ -90,6 +92,7 @@ form .input-field:first-child {
   outline: none;
   font-size: 0.9rem;
   color: rgba(0, 0, 0, 0.7);
+  width: 100%;
 }
 
 .input-field input::placeholder {
